@@ -1,5 +1,6 @@
 README
 MANIFEST
+COPYING
 ChangeLog
 Makefile.in
 configure.in
